[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Homely Assist", email = "homeconnecteasy@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.50",
    "flask>=3.1.2",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langgraph>=0.6.10",
    "python-dotenv>=1.1.1",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
